--- a/resources/sass/pages/dashboard.scss
+++ b/resources/sass/pages/dashboard.scss
@@ -1,7 +1,17 @@
 .dashboard {
+    h1 {
+        text-align: center;
+    }
+
     h2 {
         border-bottom: 4px solid $vert-clair;
         font-weight: 300;
         line-height: 4rem;
+    }
+
+    td {
+        &.actions {
+            text-align: center;
+        }
     }
 }
